# Agile

./: README.md  index.py  pyproject.toml
infra/cloudformation/: application.yaml
scripts/: deploy-agile-workspace.ps1  publish-runtime.ps1
tests/: test_agile.py  test_assets.py  test_aws_runtime.py
ui/workspace-admin/: app.js  index.html  styles.css
xleo_agile_workspace/: __init__.py  agile.py  aws_runtime.py
